tests/precess-tests/expectations/fail/init_uninhabited_type.typ.expectation
#Contains
Cannot bind to uninhabited Type `Box!`